--- a/.github/workflows/pr-for-updates.yaml
+++ b/.github/workflows/pr-for-updates.yaml
@@ -57,3 +57,4 @@ jobs:
           # This must be used as GitHub Actions token does not support pushing
           # to protected branches.
           GITHUB_TOKEN: ${{ secrets.MERGE_ME_SECRET }}
+          GITHUB_LOGIN: denis-tingaikin
