--- a/.github/workflows/pr-for-updates.yaml
+++ b/.github/workflows/pr-for-updates.yaml
@@ -27,19 +27,19 @@ jobs:
           route: GET /repos/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: can-query-protected-branches
-      #   id: can-query-protected-branches
-      #   continue-on-error: true
-      #   run: |
-      #     BRANCH_QUERY='{ repository(name: "actions-testing-repository-a", owner: "denis-tingaikin") { branchProtectionRules(first: 10) { edges { node { id } } } } }'
-      #     GRAPH_QUERY=$(jq -n --arg q "$(echo $BRANCH_QUERY | tr -d '\n')" '{ query: $q}')
-      #     curl -X POST \
-      #     -si \
-      #     -H "Accept: application/vnd.github.package-deletes-preview+json" \
-      #     -H "Content-Type: application/json" \
-      #     -H "Authorization: bearer ${{ secrets.GITHUB_TOKEN }}" \
-      #     --data "$GRAPH_QUERY" \
-      #     --url https://api.github.com/graphql
+      - name: can-query-protected-branches
+        id: can-query-protected-branches
+        continue-on-error: true
+        run: |
+          BRANCH_QUERY='{ repository(name: "actions-testing-repository-a", owner: "denis-tingaikin") { branchProtectionRules(first: 10) { edges { node { id } } } } }'
+          GRAPH_QUERY=$(jq -n --arg q "$(echo $BRANCH_QUERY | tr -d '\n')" '{ query: $q}')
+          curl -X POST \
+          -si \
+          -H "Accept: application/vnd.github.package-deletes-preview+json" \
+          -H "Content-Type: application/json" \
+          -H "Authorization: bearer ${{ secrets.GITHUB_TOKEN }}" \
+          --data "$GRAPH_QUERY" \
+          --url https://api.github.com/graphql
       - name: merge-if-build-success
         uses: ridedott/merge-me-action@v2
         if:  |
@@ -56,5 +56,5 @@ jobs:
           #
           # This must be used as GitHub Actions token does not support pushing
           # to protected branches.
-          GITHUB_TOKEN: ${{ secrets.MERGE_ME_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_LOGIN: denis-tingaikin
